Remove Jdk8OrEarlier and Jdk9OrEarlier